# open-data-pipeline

./: .cursorrules  .gitignore  LICENSE  odp_open_source_local_setup.sh
spark_server_app/: main.py  mongo_create.py  requirements.txt  setup.cfg  setup.py
spark_server_app/hadoop_local/flat_files/: Departments.csv  Employees.csv  Salaries.csv  Students.csv  Students_1.csv  file1.csv  file1.xlsx  file1_with_semicolon.csv  file2.csv  file3.csv
spark_server_app/hadoop_local/yml/: chat_1.yml
spark_server_app/spark_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
spark_server_app/spark_server/audit_log/: service.py  utils.py
spark_server_app/spark_server/config/: config.py
spark_server_app/spark_server/configurations/: configuration.py  mongo_to_yaml_translator.py  prepare_connection_id.py  replace_connections.py
spark_server_app/spark_server/connectors/: connector.py  mongo_operations.py  secrets.py
spark_server_app/spark_server/database_connectors/: README.md  astra.py  cassandra.py  couchbase.py  databricks.py  db_connector.py  db_provider.py  firebird.py  googlesheet.py  mysql.py  oracle.py  postgres.py  redshift.py  s3.py  snowflake.py  sqlserver.py
spark_server_app/spark_server/file_operations/: read.py  write.py
spark_server_app/spark_server/logger/: logger.py
spark_server_app/spark_server/models/: connector.py
spark_server_app/spark_server/pipeline/: combiner.py  loader.py  (+8 more)
spark_server_app/test_files/: data1.csv  data2.csv  dept.csv  file3.csv  file4.csv
spark_server_app/tests/: conftest.py  create_data.py  test_client.py  test_main.py
(+874 files in other folders)
