[metadata]
name = spark_server
version = 1.0
author = Helical
# author_email = mailto:youremail@email.com
# description = Your description of the project
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = yourprojecturl.com
# classifiers =
#     Programming Language :: Python :: 3
#     Operating System :: OS Independent
# license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = spark_server